Fixed scrollbar problem

--- a/theme/src/kmom05.less
+++ b/theme/src/kmom05.less
@@ -133,3 +133,7 @@ figure.figure-codepen {
 .rm-mobile {
     background-image: linear-gradient(@bgColorMenuMobile1, @bgColorMenuMobile2);
 }
+
+.inner-wrap-header .row {
+    max-width: 100%;
+}
